<resources>
    <string name="app_name">ScreenShot Capture</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="overlay_icon">Overlay Icon</string>
    <string name="shake">Shake</string>
    <string name="camera_button">Camera Button</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="taptoscreenshot">Tap to screen shot</string>
    <string name="running">Running</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="seconds">Seconds</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>


    <string name="save_notification_icon">notification_icon</string>
    <string name="save_overlay_icon">overlay_icon</string>
    <string name="save_camera_button">camera_button</string>
    <string name="save_shake">shake</string>
    <string name="save_state">isstart</string>


    <string name="prefStorageTittle">STORAGE</string>
    <string name="prefGeneralTittle">GENERAL</string>
    <string name="prefLayoutTittle">LAYOUT</string>
    <string name="prefTimeoutTittle">TIME OUT</string>
    <string name="prefImageFormat">Image Format</string>
    <string name="prefNotificationTittle">Notification</string>

    <string name="saveSilentlyTittle">Save silently</string>
    <string name="startOnBoot">Start on boot</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="saveLocation">Save location</string>
    <string name="fileName">File name</string>
    <string name="vibrate">Vibrate</string>
    <string name="countdown">Countdown</string>
    <string name="selectdirectories">Select Directories</string>

    <string name="savesilently_key">savesilently</string>
    <string name="startonboot_key">startonboot</string>
    <string name="theme_key">theme</string>
    <string name="language_key">language</string>
    <string name="savelocation_key">savelocation</string>
    <string name="vibrate_key">vibrate</string>
    <string name="countdown_key">countdown</string>
    <string name="countdownValues_key">countdownValues</string>
    <string name="filename_key">filname</string>
    <string name="countdownvaluetittle">"Time countdown"</string>
    <string name="filetype_key">filetype</string>
    <string name="started_key">started</string>
    <string name="key_ads">ads</string>
    <string name="alertDelete">Are you sure ?</string>
    <string name="positiveConfirm">Ok</string>
    <string name="negativeConfirm">Cancel</string>
    <string name="deleteSuccess">Deleted</string>
    <string name="deleteFailed">Deleted Failed</string>
    <string name="saved">Saved</string>


    <string name="appID">ca-app-pub-6948561001881396~5064533115</string>
    <string name="banner3">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner2">ca-app-pub-3940256099942544/6300978111</string>

    <!--<string name="banner1">ca-app-pub-6948561001881396/8592714580</string>-->
    <!--<string name="banner2">ca-app-pub-6948561001881396/5068148952</string>-->
</resources>
