<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorBackGround"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <Button
        android:textStyle="bold"
        android:textColor="#FFF"
        android:background="@drawable/roundedbutton"
        android:id="@+id/btnStart"
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/swnotificationicon"
        android:layout_marginTop="@dimen/margin20dp"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/switchHeight"
        android:text="@string/notification_icon" />
    <Switch
        android:id="@+id/swoverlayicon"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/switchHeight"
        android:text="@string/overlay_icon" />
    <Switch
        android:id="@+id/swcamerabutton"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/switchHeight"
        android:text="@string/camera_button" />
    <Switch
        android:id="@+id/swshake"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/switchHeight"
        android:text="@string/shake" />


</LinearLayout>
